--- a/eco-bee src/frontend/package.json
+++ b/eco-bee src/frontend/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
     "next": "^15.4.6",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.45.1",
